// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/ino-nav-drawer AnchorRight smoke-test 1`] = `
<div id="root-inner">
  <div class="story-nav-drawer__default">
    <ino-nav-drawer class="customizable-drawer"
                    open="true"
                    anchor="right"
                    variant="docked"
    >
      <div slot="header">
        <ino-img slot="logo"
                 width="50"
                 src="static/media/src/assets/images/james-logo.png"
        >
        </ino-img>
        <p>
          inovex
        </p>
      </div>
      <ino-list slot="content">
        <ino-nav-item text="Some Link"
                      activated
        >
          <ino-icon icon="onboarding">
          </ino-icon>
        </ino-nav-item>
      </ino-list>
      <ino-list slot="footer">
        <ino-nav-item text="My Profile">
          <ino-icon icon="employee">
          </ino-icon>
        </ino-nav-item>
      </ino-list>
      <main slot="app"
            class="main-content"
      >
        <ino-button fill="outline"
                    dense
                    class="toggle-nav"
        >
          Toggle Navigation
        </ino-button>
        <br>
        <br>
        Your App goes here 🤘
        <br>
        <br>
      </main>
    </ino-nav-drawer>
  </div>
</div>
`;

exports[`Structure/ino-nav-drawer Dismissible smoke-test 1`] = `
<div id="root-inner">
  <div class="story-nav-drawer__default">
    <ino-nav-drawer class="customizable-drawer"
                    open="true"
                    anchor="left"
                    variant="dismissible"
    >
      <div slot="header">
        <ino-img slot="logo"
                 width="50"
                 src="static/media/src/assets/images/james-logo.png"
        >
        </ino-img>
        <p>
          inovex
        </p>
      </div>
      <ino-list slot="content">
        <ino-nav-item text="Some Link"
                      activated
        >
          <ino-icon icon="onboarding">
          </ino-icon>
        </ino-nav-item>
      </ino-list>
      <ino-list slot="footer">
        <ino-nav-item text="My Profile">
          <ino-icon icon="employee">
          </ino-icon>
        </ino-nav-item>
      </ino-list>
      <main slot="app"
            class="main-content"
      >
        <ino-button fill="outline"
                    dense
                    class="toggle-nav"
        >
          Toggle Navigation
        </ino-button>
        <br>
        <br>
        Your App goes here 🤘
        <br>
        <br>
      </main>
    </ino-nav-drawer>
  </div>
</div>
`;

exports[`Structure/ino-nav-drawer Modal smoke-test 1`] = `
<div id="root-inner">
  <div class="story-nav-drawer__default">
    <ino-nav-drawer class="customizable-drawer"
                    open="false"
                    anchor="left"
                    variant="modal"
    >
      <div slot="header">
        <ino-img slot="logo"
                 width="50"
                 src="static/media/src/assets/images/james-logo.png"
        >
        </ino-img>
        <p>
          inovex
        </p>
      </div>
      <ino-list slot="content">
        <ino-nav-item text="Some Link"
                      activated
        >
          <ino-icon icon="onboarding">
          </ino-icon>
        </ino-nav-item>
      </ino-list>
      <ino-list slot="footer">
        <ino-nav-item text="My Profile">
          <ino-icon icon="employee">
          </ino-icon>
        </ino-nav-item>
      </ino-list>
      <main slot="app"
            class="main-content"
      >
        <ino-button fill="outline"
                    dense
                    class="toggle-nav"
        >
          Toggle Navigation
        </ino-button>
        <br>
        <br>
        Your App goes here 🤘
        <br>
        <br>
      </main>
    </ino-nav-drawer>
  </div>
</div>
`;

exports[`Structure/ino-nav-drawer Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-nav-drawer__default">
    <ino-nav-drawer class="customizable-drawer"
                    open="true"
                    anchor="left"
                    variant="docked"
    >
      <div slot="header">
        <ino-img slot="logo"
                 width="50"
                 src="static/media/src/assets/images/james-logo.png"
        >
        </ino-img>
        <p>
          inovex
        </p>
      </div>
      <ino-list slot="content">
        <ino-nav-item text="Some Link"
                      activated
        >
          <ino-icon icon="onboarding">
          </ino-icon>
        </ino-nav-item>
      </ino-list>
      <ino-list slot="footer">
        <ino-nav-item text="My Profile">
          <ino-icon icon="employee">
          </ino-icon>
        </ino-nav-item>
      </ino-list>
      <main slot="app"
            class="main-content"
      >
        <ino-button fill="outline"
                    dense
                    class="toggle-nav"
        >
          Toggle Navigation
        </ino-button>
        <br>
        <br>
        Your App goes here 🤘
        <br>
        <br>
      </main>
    </ino-nav-drawer>
  </div>
</div>
`;
